@@ -2,10 +2,10 @@
 COMMENT=/\\*(?:.|[\\n\\r])*?\\*/|//.*
 STRING=\"((?:\\\")|.*)?\"
 IDENTIFIER=[a-z][a-zA-Z0-9_]*
-TYPE=[A-Z_][a-zA-Z0-9_]*
+TYPE=[A-Z_]\\w*
 KEYWORD=abstract|boolean|break|byte|case|catch|char|class|const|continue|\
 do|double|enum|else|extends|final|finally|float|for|default|implements|import|\
 instanceof|int|interface|long|native|new|goto|if|public|short|super|switch|\
 synchronized|package|private|protected|transient|return|void|static|while|this|\
 throw|throws|try|volatile|strictfp|true|false|null
-TYPE3=@[a-zA-Z]+
+TYPE3=@\\w+
