@@ -75,7 +75,7 @@ DEFAULT_EDIT_MENU= \
   Redo=REDO=redo.png                              , \
   -                                               , \
   Find and Replace=FIND=find.png                  , \
-  Find Next=FIND_NEXT=Find-next.png              
+  Find Next=FIND_NEXT=find-next.png
 # Default Popup Menu
 PopupMenu = \
   ${DEFAULT_EDIT_MENU}                              , \
